--- a/css/styles.css
+++ b/css/styles.css
@@ -24,14 +24,11 @@
 	margin: 0px;
 	color: #0f0f0f;
 }
-.history-content {
-	margin-top:50px;
-	margin-bottom:50px;
+.radio-inline {
+padding-right:15px;
+
 }
-.leadership-content {
-   margin-top:50px;
-   margin-bottom:50px;
-}
+
 .body {
 	padding: 50px 0px 0px 0px;
 	z-index:0;
