--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,22 @@ padding-right:15px;
 	left: 0;
 	min-height: 300px;
 }
+.carousel--round-indicators li {
+    border-radius: 10px;
+    margin: 1px 3px;
+    height: 10px;
+    max-width: 10px;
+    border: 1px solid #FFF;
+    background-color: transparent;
+}
+.carousel-indicators .active {
+    background-color: #fff;
+    max-width: 12px;
+    margin: 0 3px;
+    height: 12px;
+}
+#carouselButtons {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+}
