--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ padding-right:15px;
     margin: 0 3px;
     height: 12px;
 }
-#carouselButtons {
+#carousel-button {
     right:0px;
     position: absolute;
     bottom: 0px;
